--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-web": "~0.11.7",
+    "react-native-xml2js": "^1.0.3",
     "react-navigation": "^4.3.3",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
